Tue Jan 28 16:07:21 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL/be_include/be_interface.h:

          Delayed the check for abstract interfaces in the 
          ancestry of a non-abstract interface until just before
          the knowledge is needed for the first time in code
          generation. This corrects a problem with forward
          declared interfaces whose full definition member has
          not yet been replaced by its final value. Thanks to
          Michael Soden <soden@ikv.de> for reporting the
          problem.

Tue Jan 28 14:27:01 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/Notify/Properties.cpp:
	  In case no conf. file is specified, the EC will default to
	  reactive concurrency.  This fixes the problem of the Notify
	  crashing without any conf. file. Thanks to Dennis Sporcic
	  <dennis@hsa.com.au> and Frederic Langlet
	  <Frederic.Langlet@alcatel.com> for reporting this problem. 
		
Mon Jan 27 23:01:43 2003  Frank Hunleth  <frank@hunleth.com>

	* orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:  Fixed code
	  that was supposed to fake out a good error return when the call
	  to send() fails.  This fixes an exception break on WinXP when
	  the network cable is unplugged and a program makes a MIOP
	  request.  The justification behide ignoring the error is
	  explained further in the code, but basically, it takes advantage
	  of the fact that MIOP is unreliable by specification, and hopes
	  that the source of the error will be corrected.  Thanks to
	  Antonio Leonforte <a.leonforte@mclink.it> for pointing out the
	  exception break.

Mon Jan 27 19:16:33 2003  Pradeep Gore  <pradeep@oomworks.com>

	Made the following changes to fix the race related crashes of
	Notify seen in orbsvcs/tests/Notify/performance-tests/RedGreen -

	* orbsvcsy/orbsvcs/Notify/Builder.cpp: