@@ -434,6 +434,29 @@ the ORB.
 
     </TD>
   </TR>
+  <TR>
+    <TD><CODE>-ORBListenEndpoints</CODE> <EM>endpoint</EM></TD>
+    <TD><A name=-ORBListenEndpoints></A>This Option is similar to
+    ORBEndPoint option described above. The ORBEndpoint option
+    would be deprecated in later versions on TAO. This option is
+    introduced with Object Reference Template Specification. 
+    </TD>
+  </TR>
+
+  <TR>
+    <TD><CODE>-ORBId</CODE> <EM>ORB_NAME</EM></TD>
+    <TD><A name=-ORBId></A>This option allows setting the name of an
+    ORB as the Option name suggests.
+    </TD>
+  </TR>
+
+  <TR>
+    <TD><CODE>-ORBServerId</CODE> <EM>server_id</EM></TD>
+    <TD><A name=-ORBId></A>This option allows setting a name/id to
+    a server to uniquely identify a server to the Implementation Repository.
+    </TD>
+  </TR>
+
 
 </TABLE>
 </P>
