@@ -1,3 +1,9 @@
+Tue Jan 28 15:59:45 2003  Priyanka Gontla  <pgontla@ece.uci.edu>
+
+	* docs/Options.html: 
+	  Added documentation on support to ORBListenEndpoints, ORBId and 
+	  ORBServerId  ORB options.
+
 Tue Jan 28 16:07:21 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_interface.cpp:
